Fix long captions on small screens

--- a/styles.css
+++ b/styles.css
@@ -163,7 +163,7 @@ body {
 }
 
 .carousel__track-container {
-    height: 108%;
+    height: 110%;
     position: relative;
     overflow: hidden;
     padding-top: 25px;
@@ -411,8 +411,9 @@ body {
 }
 /*  */
 .caption-15 {
-
-    width: 510px;
+    @media screen and (max-width: 768px) {
+        width: 510px;
+    }
     height: 3rem;
     margin: 0 auto;
     line-height: 1.3;
@@ -420,8 +421,10 @@ body {
 }
 /*  */
 .caption-16 {
+    @media screen and (max-width: 768px) {
+        width: 540px;
+    }
     text-align: center;
-    width: 540px;
     margin: 0 auto;
 
 }
